<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="38dp"
        android:layout_height="39dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/lbl_ip"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_ip"
        android:layout_width="139dp"
        android:layout_height="39dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/Hint_IP"
        android:inputType="textPersonName"
        android:text="@string/txt_ip"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="44dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/lbl_port"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/txt_ip"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_port"
        android:layout_width="35dp"
        android:layout_height="39dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/Hint_Port"
        android:inputType="textPersonName"
        android:text="@string/txt_port"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/butt_connect"
        android:layout_width="58dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/Button_Connect"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/txt_port"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/butt_dc"
        android:layout_width="61dp"
        android:layout_height="38dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/Button_Disconnected"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_history"
        android:layout_width="400dp"
        android:layout_height="592dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/txtmulti_chat"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_msg"
        android:layout_width="317dp"
        android:layout_height="35dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/Hint_msg"
        android:inputType="textPersonName"
        android:text="@string/txt_msg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_history"
        app:layout_constraintVertical_bias="0.625" />

    <Button
        android:id="@+id/butt_send"
        android:layout_width="76dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/Button_Send"
        app:layout_constraintStart_toEndOf="@+id/txt_msg"
        app:layout_constraintTop_toBottomOf="@+id/txt_history" />
</androidx.constraintlayout.widget.ConstraintLayout>